<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.co.edu.cun.www1104379214.bienestarcun.frragmentContent.CircleAdministration_app"
    android:id="@+id/contentCircleAdmin">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/txtNameActivitieNew"
            android:hint="@string/txt_name_itinerario"
            android:background="@color/BackgroundEDText"
            android:layout_marginTop="3dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/txtDetailNewActiviti"
            android:hint="@string/txt_details_itinerario"
            android:background="@color/BackgroundEDText"
            android:layout_marginTop="3dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView4"
            android:text="@string/lb_dateItinerario" />

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pickerFechaNewItinerario"
            android:layout_gravity="center_horizontal"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView5"
            android:text="@string/lb_hourItinerario" />

        <TimePicker
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pickerHoraNewItinerario"
            android:timePickerMode="spinner"
            android:layout_weight="1" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/txt_btn_additinerario"
            android:id="@+id/btnAddNewItinerario"
            android:layout_gravity="center_horizontal"
            android:onClick="SaveItinerarioNew"
            android:background="@color/backgroundBotton"
            android:layout_marginBottom="3dp" />

    </LinearLayout>


</FrameLayout>
